# ALGS

./: .gitignore  README.md
cpp/: CMakeLists.txt
cpp/completed/: 60.cpp  con_2167_B.cpp  con_2189_A.cpp  con_2193_A.cpp  con_392_B.cpp  tower_of_hanoi_dp.cpp  tower_of_hanoi_recursive.cpp
cpp/completed/cf/: con_2167_C.cpp  con_2194_B.cpp  con_2209_A.cpp  con_2209_B.cpp  con_2209_C.cpp  con_2216_A.cpp  con_2217_A.cpp  con_2218_B.cpp  con_2218_C.cpp
cpp/completed/cses/: apple_division.cpp  array_description.cpp  bit_strings.cpp  book_shop.cpp  building_roads.cpp  building_teams.cpp  chessboard_and_queens.cpp  coin_combinations_1.cpp  coin_combinations_2.cpp  coin_piles.cpp  counting_rooms.cpp  counting_towers.cpp  creating_strings.cpp  dice_combinations.cpp  digit_queries.cpp  edit_distance.cpp  grey_codes.cpp  grid_coloring.cpp  grid_path_1.cpp  grid_path_description.cpp  hanoi.cpp  increasing_array.cpp  knights_move_grid.cpp  labyrinth.cpp  longest_common_sequence.cpp  message_route.cpp  mex_grid_construction.cpp  minimizing_coins.cpp  missing_number.cpp  number_spiral.cpp  palindrom_reorder.cpp  permutations.cpp  raab1.cpp  removing_digits.cpp  repetition.cpp  round_trip.cpp  trailing_zeros.cpp  two_knights.cpp  two_sets.cpp
cpp/completed/lc/: 108.cpp  118.cpp  1689.cpp  188.cpp  309.cpp  407.cpp  42.cpp  51.cpp  60.cpp
cpp/incomplete/: arbirtrary_int_mul.cpp  cf_idk_idc.cpp  con_2209_C.cpp  main.cpp
cpp/src/: temp.cpp
cpp/templates/: cpp20.cpp  cpp23.cpp
py/: dumb.py
py/sol/cses/: 3217.py
